--- a/aa_times/app/views/shared/_main_nav.html.erb
+++ b/aa_times/app/views/shared/_main_nav.html.erb
@@ -11,4 +11,17 @@
 			</li>
 		</ul>
 	</nav>
+  
+  
+  <nav class="right-nav">
+    <ul>
+      <li><button type="button" name="button">Subscribe Now</button> </li>
+      <li><button type="button" name="button">Log In</button> </li>
+      <li class="gear-dropdown-btn">
+        <i id="gear-dropdown-btn" class="fas fa-cog">
+          <%= render 'shared/gear_dropdown' %>
+        </i>
+      </li>
+    </ul>
+  </nav>
 </header>
