--- a/aa_times/app/assets/stylesheets/base/layout.scss
+++ b/aa_times/app/assets/stylesheets/base/layout.scss
@@ -13,22 +13,26 @@ body {
 }
 
 button {
-	// background-color:
-	// border-color:
-	// color:
-	// font-weight:
-	// padding:
-	// border-radius:
-	// transition:
-	// font-family:
-	// text-transform:
-	// font-size:
-	// text-align:
+	background-color: $light-blue;
+	border-color: $blue;
+	color: white;
+	font-weight: bold;
+	padding: 10px;
+	border-radius: 5px;
+	transition: background-color 0.5s;
+	font-family: $sans-serif;
+	text-transform: uppercase;
+	font-size: 12px;
+	text-align: center;
 }
 
 button:hover {
-	// background-color:
-	// border-color:
+	background-color: $dark-blue;
+	border-color: $dark-blue;
+}
+
+.hidden {
+  display: none;
 }
 
 /*
