--- a/aa_times/app/assets/stylesheets/components/_gear_dropdown.scss
+++ b/aa_times/app/assets/stylesheets/components/_gear_dropdown.scss
@@ -1,1 +1,62 @@
 // Use the gear_dropdown.png screenshot as a style guide
+.gear-dropdown {
+  padding: 10px 10px;
+  position: absolute;
+  top: 30px;
+  right: 0px;
+  background-color: white;
+  border: 1px solid $light-gray;
+  z-index: 1;
+  box-sizing: border-box;
+  width: 245px;
+  box-shadow: -1px 4px 6px 1px rgba(0, 0, 0, 0.09);
+}
+
+.gear-dropdown-btn {
+  position: relative;
+}
+
+.dropdown-subtitle {
+  font-family: $sans-serif;
+  font-size: 10px;
+  padding: 10px 5px 5px 5px;
+  display: block; 
+}
+
+.editions li , .help li{
+  padding: 5px;
+  margin: 5px 0;
+  font-size: 12px;
+  font-family: $sans-serif;
+  font-weight: normal;
+}
+
+.editions li {
+  color: $dark-gray;
+}
+
+.editions li:first-of-type {
+  color: black;
+}
+
+.editions li:hover {
+  background-color: $light-gray;
+  border-radius: 5px;
+}
+
+.editions {
+  border-bottom: 1px solid $light-gray;
+}
+
+.help li {
+  color: $blue;  
+}
+
+.help li:hover {
+  text-decoration: underline;
+}
+.help li:last-child {
+  text-transform: none;
+  margin-bottom: 0;
+}
+
