--- a/aa_times/app/assets/stylesheets/components/_main_nav.scss
+++ b/aa_times/app/assets/stylesheets/components/_main_nav.scss
@@ -1,34 +1,49 @@
 .main-nav {
-
+  display: flex;
+  justify-content: space-between;
+  // padding: 15px 0;
+  align-items :center;
+  border-bottom :1px solid $light-gray
 }
 
 .left-nav > ul,
 .right-nav > ul {
-
+  display: flex;
+  align-items: center;
+  margin: 6px;
 }
 
 .left-nav > ul > li {
-
+  font-family: $sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  padding: 10px;
+  // margin: 20px;
 }
 
 .right-nav > ul > li {
-
+  font-family: $sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  padding: 2px;
+  // margin: 10px;
 }
 
 .right-nav > ul > li:last-of-type {
-
+  
 }
 
 .left-nav > ul > li:hover,
 .right-nav > ul > li:last-of-type:hover {
-
+  background-color: $lightest-gray;
 }
 
 .left-nav span {
-
+  margin: 15px;
 }
 
 
 .right-nav i {
-
+  margin-left: 10px;
+  font-size: 15px;
 }
