--- a/aa_times/app/assets/stylesheets/components/_masthead.scss
+++ b/aa_times/app/assets/stylesheets/components/_masthead.scss
@@ -25,6 +25,14 @@
 	color: $dark-gray;
 }
 
+.language-nav li:first-child {
+  font-weight: bold;
+}
+
+.language-nav a:hover, .masthead-links a:hover {
+  text-decoration: underline;
+}
+
 .language-nav ul {
 	display: flex;
 }
@@ -47,6 +55,10 @@
 	border-right: 1px solid $light-gray;
 }
 
+.masthead-links li:last-child {
+  border-right: 0;
+}
+
 .masthead-links button {
 	background: none;
 	padding: 0px;
@@ -57,6 +69,7 @@
 
 .masthead-links button:hover {
 	background-color: $lightest-gray;
+  transition: background-color 0s;
 }
 
 .masthead-links a,
