--- a/aa_times/app/assets/stylesheets/components/_sections_nav.scss
+++ b/aa_times/app/assets/stylesheets/components/_sections_nav.scss
@@ -3,6 +3,7 @@
   align-items: center; 
   justify-content: center;
   border-bottom: 1px solid $light-gray;
+  flex-wrap: wrap;
 }
 
 .section-nav li {
