--- a/aa_times/app/assets/stylesheets/base/grid.scss
+++ b/aa_times/app/assets/stylesheets/base/grid.scss
@@ -1,19 +1,38 @@
 .col {
-  // ...
+  float: left;
+  box-sizing: border-box; 
 }
 
 /* Attribute selector targeting all elements
 with a class attribute containing 'col-' */
 [class*='col-'] {
   // ...
+  width: 100%; 
 }
 
 [class*='col-']:last-of-type {
   // ...
 }
 
+.col-20-100 {
+  width: 20%;
+}
+
+.col-35-100 {
+  width: 35%;
+}
+
+.col-45-100 {
+  width: 45%;
+}
+
+.col-16-35 {
+  width: 45.71%;
+}
+
+
 @media all and (max-width: 1000px) {
   [class*='col-'] {
-    // width:
+    width: 60%;
   }
 }
